[dololi] Build without a DLL file. Generate code dynamically

--- a/dololi/dololi.conf
+++ b/dololi/dololi.conf
@@ -1,3 +1,4 @@
+# 32 bit
 [DEFAULT]
 CODE_RVA = 4096
 DATA_RVA = 8192
@@ -6,11 +7,25 @@ DATA_RVA = 8192
 1_BYTE = 0
 2_DWORD = 1_STR_DATA
 3_DWORD = 2_STR_DATA
-4_BYTE = 0
+4_DWORD = 0
 5_FUNC  = user32.dll;MessageBoxA
-6_BYTE = 0
+6_DWORD = 0
 7_FUNC  = kernel32.dll;ExitProcess
 
 [DATA]
 1_STR = LIEF and Python are awesome
 2_STR = Hello World
+
+# 64 bit
+#[CODE]
+#1_BYTE = 0
+#2_QWORD = 1_STR_DATA
+#3_QWORD = 2_STR_DATA
+#4_QWORD = 0
+#5_FUNC  = user32.dll;MessageBoxA
+#6_QWORD = 0
+#7_FUNC  = kernel32.dll;ExitProcess
+
+#[DATA]
+#1_STR = LIEF and Python are awesome
+#2_STR = Hello World
